# mathcalc

./: CMakeLists.txt  CalculatorRPN.cpp  CalculatorRPN.hpp  Exception.cpp  Exception.hpp  LatexMath.cpp  LatexMath.hpp  Operator.cpp  Operator.hpp  ParserRPN.cpp  ParserRPN.hpp  RationalNumber.cpp  RationalNumber.hpp  main.cpp  version.cmake.in
include/: CalculatorRPN.hpp  Operator.hpp  ParserRPN.hpp  RationalNumber.hpp  Token.hpp  Version.hpp  Version.hpp.in
src/: CalculatorRPN.cpp  Exception.cpp  Operator.cpp  ParserRPN.cpp  RationalNumber.cpp  main.cpp
